adjust content and color in index.html

--- a/index.html
+++ b/index.html
@@ -529,8 +529,12 @@
                         </p>
                         <p>
                             Currently collaborating with Dialpad on my dissertation project, where I leverage large 
-                            datasets to improve automatic speech recognition (ASR) accuracy in targeted domains. 
-                            My transition to AI and NLP in 2024 was driven by a passion for technology and a desire 
+                            datasets to improve automatic speech recognition (ASR) accuracy in targeted domains.  
+                            Previously, during my internship at BIGO, I proactively built an AI chatbot to help the CEO’s 
+                            office stay updated on the latest tech developments. Before transitioning into AI, I worked 
+                            as a UX designer with NGOs and startups while completing my undergraduate degree in English Studies 
+                            (First Class Honours).
+                            My transition to AI and NLP was driven by a passion for technology and a desire 
                             to combine my background in linguistics, human-centered thinking, and design.
                         </p>
                         <p>
@@ -557,7 +561,7 @@
                         <div class="experience-header">
                             <div>
                                 <div class="experience-title">Research Collaborator</div>
-                                <div class="experience-company">Dialpad</div>
+                                <div class="experience-company"><a href="https://www.dialpad.com/" target="_blank">Dialpad</a></div>
                             </div>
                             <div class="experience-date">Ongoing</div>
                         </div>
@@ -576,9 +580,9 @@
                         <div class="experience-header">
                             <div>
                                 <div class="experience-title">Machine Learning Engineer Intern</div>
-                                <div class="experience-company">BIGO Technology</div>
+                                <div class="experience-company"><a href="https://www.bigo.sg/" target="_blank">BIGO Technology</a></div>
                             </div>
-                            <div class="experience-date">2024</div>
+                            <div class="experience-date">Jun - Aug 2024</div>
                         </div>
                         <div class="experience-description">
                             <ul>
@@ -738,7 +742,7 @@
             <div class="container">
                 <div class="contact-content">
                     <h2>Let's Connect</h2>
-                    <p>I'm always interested in discussing AI, machine learning, and innovative projects. 
+                    <p style="color: black;">I'm always interested in discussing AI, machine learning, and innovative projects. 
                     Feel free to reach out!</p>
                     <div class="contact-links">
                         <a href="mailto:siyingchen1006@gmail.com" class="contact-link">
