adjuct content and color in index.html

--- a/index.html
+++ b/index.html
@@ -543,7 +543,7 @@
                             needs of all communities.
                         </p>
                         <div style="margin-top: 2rem;">
-                            <a href="#" class="btn btn-primary" onclick="alert('Please upload your resume file and update this link!')">
+                            <a href="#" class="contact-link" onclick="alert('Please upload your resume file and update this link!')">
                                 <i class="fas fa-download"></i>
                                 Download Resume
                             </a>
@@ -711,7 +711,7 @@
                                 <div class="education-degree">MSc in Speech and Language Processing</div>
                                 <div class="education-school">The University of Edinburgh</div>
                             </div>
-                            <div class="experience-date">09/2024 - 08/2025</div>
+                            <div class="experience-date">Sep 2024 - Aug 2025</div>
                         </div>
                         <div class="experience-description">
                             <p><strong>Relevant Courses:</strong> Machine Learning Practical, Accelerated Natural Language Processing, 
@@ -726,7 +726,7 @@
                                 <div class="education-degree">B.A. in English Studies (Language Technology Stream)</div>
                                 <div class="education-school">The Chinese University of Hong Kong, Shenzhen</div>
                             </div>
-                            <div class="experience-date">09/2020 - 06/2024</div>
+                            <div class="experience-date">Sep 2020 - Jun 2024</div>
                         </div>
                         <div class="experience-description">
                             <p><strong>First Class Honours</strong></p>
