adjust color and content of index.html

--- a/index.html
+++ b/index.html
@@ -742,7 +742,7 @@
             <div class="container">
                 <div class="contact-content">
                     <h2>Let's Connect</h2>
-                    <p style="color: black;">I'm always interested in discussing AI, machine learning, and innovative projects. 
+                    <p style="color: #333;">I'm always interested in discussing AI, machine learning, and innovative projects. 
                     Feel free to reach out!</p>
                     <div class="contact-links">
                         <a href="mailto:siyingchen1006@gmail.com" class="contact-link">
