adjuct content and color of index.html

--- a/index.html
+++ b/index.html
@@ -497,8 +497,8 @@
                 <h1>Siying Chen</h1>
                 <p class="subtitle">Aspiring Machine Learning Engineer</p>
                 <p class="description">
-                    Master's student in Speech and Language Processing at the University of Edinburgh, 
-                    passionate about AI, NLP, and creating impactful solutions that bridge linguistics, 
+                    Master's student in Speech and Language Processing at the University of Edinburgh.<br> 
+                    Passionate about AI, NLP, and creating impactful solutions that bridge linguistics, 
                     human-centered thinking, and cutting-edge technology.
                 </p>
                 <div class="cta-buttons">
