adjust index.html

--- a/index.html
+++ b/index.html
@@ -543,7 +543,7 @@
                             needs of all communities.
                         </p>
                         <div style="margin-top: 2rem;">
-                            <a href="#" class="contact-link" onclick="alert('Please upload your resume file and update this link!')">
+                            <a href="#" class="btn btn-secondary" onclick="alert('Please upload your resume file and update this link!')">
                                 <i class="fas fa-download"></i>
                                 Download Resume
                             </a>
