--- a/index.html
+++ b/index.html
@@ -519,7 +519,7 @@
                 <h2>About Me</h2>
                 <div class="about-content">
                     <div class="about-image">
-                        <img src="siying.github.io/static/profilephoto.jpg" alt="Profile Photo" style="width: 300px; height: 300px; object-fit: cover; border-radius: 50%; box-shadow: 0 20px 40px rgba(102, 126, 234, 0.3);" />
+                        <img src="static/profilephoto.jpg" alt="Profile Photo" style="width: 300px; height: 300px; object-fit: cover; border-radius: 50%; box-shadow: 0 20px 40px rgba(102, 126, 234, 0.3);" />
                     </div>
                     <div class="about-text">
                         <p>
