fix errors in index.html

--- a/index.html
+++ b/index.html
@@ -535,7 +535,7 @@
                             as a UX designer with NGOs and startups while completing my undergraduate degree in English Studies 
                             (First Class Honours).
                             My transition to AI and NLP was driven by a passion for technology and a desire 
-                            to combine my background in linguistics, human-centered thinking, and design.
+                            to combine my background in linguistics, human-centered thinking, and design to create impactful solutions.
                         </p>
                         <p>
                             I believe that fostering diversity in AI—especially greater inclusion of women and 
