edit experience content

--- a/index.html
+++ b/index.html
@@ -560,7 +560,7 @@
                     <div class="experience-item">
                         <div class="experience-header">
                             <div>
-                                <div class="experience-title">Research Collaborator</div>
+                                <div class="experience-title">Machine Learning Researcher</div>
                                 <div class="experience-company"><a href="https://www.dialpad.com/" target="_blank">Dialpad</a></div>
                             </div>
                             <div class="experience-date">Ongoing</div>
@@ -586,10 +586,33 @@
                         </div>
                         <div class="experience-description">
                             <ul>
-                                <li>Developed a full-stack AI chatbot with JavaScript frontend and Python Flask backend, reducing manual research time by 80%</li>
-                                <li>Built end-to-end ETL pipeline using Scrapy and Newspaper3k to extract articles from major tech news sites</li>
-                                <li>Integrated OpenAI GPT API to generate summaries and prioritize insights aligned with strategic needs</li>
-                                <li>Containerized application using Docker, configured Nginx for secure access, and used Celery with Redis for automated tasks</li>
+                                <li>Trained a chatbot to auto-generated daily speech tech industry news report using Python, COZE, and Twitter API, reducing 97.5% of data collection time</li>
+                                <li>Fine-tunned agents by leading cross-team communication to output more specialized and standardized JSON-formatted content</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section id="experience" class="section">
+            <div class="container">
+                <h2>Related Projects</h2>
+                <div class="experience-grid">
+                    <div class="experience-item">
+                        <div class="experience-header">
+                            <div>
+                                <div class="experience-title">Passion Project</div>
+                                <div class="experience-company">AI Podcast Summary</div>
+                            </div>
+                            <div class="experience-date">Ongoing</div>
+                        </div>
+                        <div class="experience-description">
+                            <ul>
+                                <li>Led the development of an ML-powered sound recognition app, using Node.js React and Python Flask, that analyzes daily podcast and generates user feeds</li>
+                                <li>Automated a multi-tier data collection pipeline with Google Compute Engine, OpenAI API, and Selenium that extracts audios from podcast sites</li>
+                                <li>Optimized Azure MySQL database queries to optimize generation speed of daily email notification and CSV export by 25.6%</li>
+                                <li>Integrated RAG technique, through AWS Kendra, and Agent to fine-tune voice recognition models, improving word rate error by 34.5%</li>
                             </ul>
                         </div>
                     </div>
