improve experience content

--- a/index.html
+++ b/index.html
@@ -586,7 +586,7 @@
                         </div>
                         <div class="experience-description">
                             <ul>
-                                <li>Trained a chatbot to auto-generated daily speech tech industry news report using Python, COZE, and Twitter API, reducing 97.5% of data collection time</li>
+                                <li>Trained a chatbot to auto-generate daily news report for speech tech industry using Python, COZE, and Twitter API, reducing 97.5% of data collection time</li>
                                 <li>Fine-tunned agents by leading cross-team communication to output more specialized and standardized JSON-formatted content</li>
                             </ul>
                         </div>
@@ -610,9 +610,9 @@
                         <div class="experience-description">
                             <ul>
                                 <li>Led the development of an ML-powered sound recognition app, using Node.js React and Python Flask, that analyzes daily podcast and generates user feeds</li>
+                                <li>Integrated RAG and Agent techniques to generate accurate, comprehensive text summaries, fine-tuned Whisper for speech recognition, improving word error rate by 34.5%</li>
                                 <li>Automated a multi-tier data collection pipeline with Google Compute Engine, OpenAI API, and Selenium that extracts audios from podcast sites</li>
-                                <li>Optimized Azure MySQL database queries to optimize generation speed of daily email notification and CSV export by 25.6%</li>
-                                <li>Integrated RAG technique, through AWS Kendra, and Agent to fine-tune voice recognition models, improving word rate error by 34.5%</li>
+                                <li>Designed Azure MySQL database queries to optimize generation speed of daily email notification and CSV export by 25.6%</li>
                             </ul>
                         </div>
                     </div>
